--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="display-1">hello rohit</h1>
+    <p class="display-1">hello rohit</p>
     
 </body>
 </html>
